<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:fillViewport="true"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width ="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.tourguide_app.HomeFragment"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="37dp"
                android:layout_marginTop="0dp"
                android:text="@string/cairo"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="17dp"
                android:layout_marginTop="51dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/desc"
                android:textSize="20sp"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="245dp"
                android:layout_marginTop="206dp"
                android:text="@string/location"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="248dp"
                android:layout_marginTop="251dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/location_desc"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="220dp"
                android:layout_height="180dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="181dp"
                app:srcCompat="@drawable/nile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="23dp"
                android:layout_marginTop="368dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/location_desc2"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="432dp"
                android:text="@string/tourism"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="470dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/tourism_desc"
                android:textSize="20sp"
                android:textStyle="italic" />

        </RelativeLayout>

    </FrameLayout>
</ScrollView>
